--- a/src/Index.css
+++ b/src/Index.css
@@ -42,7 +42,7 @@ body {
   /* background-color: rgb(218, 218, 218); */
 }
 .Inbox {
-  background-color: #f1eeeebe;
+  background-color: #dbdfdd;
   display: flex;
   flex-direction: column;
   box-shadow: 0px 0px 10px 0px rgba(0, 0, 0, 0.897);
@@ -51,6 +51,7 @@ body {
   /* display: flex; */
   margin-right: 480px;
   margin-top: 30px;
+  height: 130px;
 }
 .Line1 {
   display: flex;
@@ -110,7 +111,7 @@ body {
   font-size: 15px;
   margin-left: 12px;
   border-radius: 5px;
-  width: 280px;
+  width: fit-content;
   text-align: center;
 }
 .tab {
@@ -121,7 +122,8 @@ body {
 }
 .numberIndex {
   margin-top: 15px;
-  background-color: #a7abab;
+  /* background-color: #a7abab; */
+  background-color: #b9c8cf;
   width: 70px;
   height: 80px;
   text-align: center;
@@ -150,10 +152,18 @@ body {
   outline: none;
   /* padding: 10px; */
 }
-
+.KNP {
+  margin-top: 15px;
+  background-color: #cccecc;
+  height: 80px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  justify-items: center;
+}
 .keyNextpage {
-  margin-top: 32.54px;
-  margin-left: 5px;
+  /* margin-top: 32.5px; */
+  /* margin-left: 5px; */
   transition: all 0.3s ease-in-out 0s;
   width: 140px;
   height: 40px;
@@ -163,11 +173,12 @@ body {
   border-color: #05aa6c;
   font-family: "Prompt";
   color: #dbd8d8;
+  margin-right: 15px;
 }
 .keyNextpage:hover {
   transform: translateY(-7px);
-  width: 160px;
-  height: 60px;
+  width: 150px;
+  height: 45px;
 }
 .settingCom {
   color: rgba(0, 0, 0, 0.74);
@@ -181,11 +192,17 @@ body {
 /* Userscreen */
 
 .navv {
-  background-color: lawngreen;
   width: 100%;
   height: 500px;
 }
-
+.user-welcomee {
+  color: rgb(206, 203, 203);
+}
+.user-welcomee-name {
+  color: rgb(206, 203, 203);
+  margin-left: 5px;
+  font-family: "prompt";
+}
 .navbar-custom {
   height: 80px;
   background-color: #000;
@@ -382,29 +399,40 @@ body {
   /* background-color: #03a96b; */
   color: #0c0e0d;
   border-radius: 5px;
-  border-style: none;
+  border-style: solid;
   width: 90px;
-  height: 45px;
+  height: 47px;
   font-family: "kanit", sans-serif;
-  border-color: aqua;
+  border-color: #6ba4ee;
   font-size: 15px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .B1:hover {
-  background-color: #5493db;
+  background-color: #3b81d1;
   /* transform: translateX(-7px); */
   color: #060707;
   transition: all 0.3s ease-in-out 0s;
 }
-.iconB {
+.B1:focus {
+  outline: none;
+  /* box-shadow: none; */
+}
+.iconBa {
   width: 20px;
   height: 20px;
   margin: 1px;
 }
+.iconBb {
+  width: 20px;
+  height: 20px;
+  margin: 1px;
+  margin-top: 3px;
+}
 .B2 {
-  background-color: #90949234;
+  /* background-color: #90949234; */
+  background-color: #c5b55a;
   margin-left: 10px;
   color: #080808;
   border-radius: 5px;
@@ -413,19 +441,21 @@ body {
   font-weight: 500;
   font-size: 15px;
   width: 90px;
-  height: 45px;
+  height: 47px;
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 .B2:hover {
-  background-color: rgba(168, 166, 166, 0.961);
+  background-color: rgba(160, 158, 158, 0.961);
   /* transform: translateY(-7px); */
   transition: all 0.3s ease-in-out 0s;
   /* transform: translateX(-7px); */
   color: #161817;
 }
-
+.B2:focus {
+  outline: none;
+}
 .itemQ {
   font-family: "Prompt";
   font-size: 17px;
@@ -491,9 +521,11 @@ body {
   /* width: fit-content; */
 }
 .positionB {
-  text-align: center;
+  /* text-align: center; */
+  display: flex;
+  justify-content: center;
 }
-.iconnBackhome {
+.iconBackhome {
   width: 15px;
   height: 15px;
   margin-right: 2px;
@@ -505,8 +537,8 @@ body {
   font-family: "Prompt";
   border-radius: 5px;
   color: rgb(92, 87, 87);
-  margin-top: 15px;
-  margin-left: 10px;
+  margin-top: 50px;
+  /* margin-left: 10px; */
   border: 1px solid;
   border-color: rgba(192, 185, 185, 0.788);
   transition: all 0.3s ease-in-out 0s;
@@ -515,11 +547,9 @@ body {
   justify-items: center;
   align-items: center;
 }
-.BackHome:hover {
-  width: 95px;
-  height: 45px;
-  /* border: none; */
-  /* border-style: inherit; */
+
+.BackHome:focus {
+  outline: none;
 }
 @media (max-width: 1150px) {
 }
@@ -637,7 +667,7 @@ body {
     width: 98%;
   }
   .itemQ {
-    font-size: 12px;
+    font-size: 15px;
   }
   .BodyZone {
     width: 85%;
@@ -672,9 +702,6 @@ body {
   .keyNextpage {
     font-size: 12px;
     width: 110px;
-    margin: 0;
-    margin-left: 5px;
-    margin-top: 35px;
   }
 
   .Inbox2 {
@@ -701,6 +728,10 @@ body {
     height: 35px;
     /* border: none; */
     /* border-style: inherit; */
+  }
+  .iconBackhome {
+    width: 30px;
+    height: 30px;
   }
   .fontBackhome {
     display: none;
@@ -745,12 +776,10 @@ body {
     align-content: center;
   }
   .Inbox {
-    height: 199.9vh;
+    height: fit-content;
     width: 95vw;
     display: flex;
     align-items: center;
-
-    margin: 0;
     margin-bottom: 20px;
     margin-top: 25px;
   }
@@ -823,19 +852,19 @@ body {
     font-size: 20px;
   }
   .KNP {
+    margin: 0;
     width: 90vw;
     display: flex;
     text-align: center;
     justify-content: center;
     align-items: center;
-    margin-bottom: 10px;
-    background-color: #cccecc;
+    /* margin-bottom: 10px; */
+    /* background-color: #b4af60e7; */
   }
   .keyNextpage {
     margin: 0;
-    margin-top: 10px;
-    margin-bottom: 5px;
   }
+
   .ZoneHead {
     width: 100vw;
   }
@@ -852,6 +881,7 @@ body {
   .K12 {
     width: 100vw;
     margin: 0;
+    margin-top: 15px;
   }
   .K13 {
     margin: 0;
@@ -890,7 +920,7 @@ body {
   }
   .Inbox2 {
     width: 95vw;
-    margin-top: 5px;
+    margin-top: 20px;
     /* background-color: none; */
     height: 200vh;
     display: flex;
@@ -949,11 +979,11 @@ body {
     height: fit-content;
   }
   .B1 {
-    width: 100px;
+    width: 140px;
     height: 50px;
   }
   .B2 {
-    width: 100px;
+    width: 140px;
     height: 50px;
   }
 }
