--- a/src/HOMEPAGE.css
+++ b/src/HOMEPAGE.css
@@ -39,13 +39,12 @@
   width: 100%;
   height: 1px;
   background-color: rgba(255, 255, 255, 0.61);
-  /* margin-bottom: 100px; */
 }
 .linespace2 {
   width: 100%;
   height: 1px;
   background-color: rgba(255, 255, 255, 0.61);
-  margin-top: 50px;
+  margin-bottom: 100px;
 }
 .herderitems {
   display: flex;
@@ -66,12 +65,12 @@
 .scroll {
   overflow-y: scroll;
   height: 80%;
+  margin-top: 5px;
 }
 .zonebody {
   display: flex;
   align-items: center;
   flex-direction: column;
-  /* justify-items: center; */
 }
 .bodygroup1 {
   display: flex;
@@ -79,14 +78,11 @@
   margin-top: 25px;
   height: 100px;
 }
-.pointer {
-  width: 15px;
-  height: 10px;
-  background-color: rgb(253, 253, 252);
-  border-radius: 50%;
+.pin {
+  width: 35px;
+  height: 35px;
   margin-right: 20px;
   margin-top: 12px;
-  /* margin-: ; */
 }
 .bodytext1 {
   font-size: 25px;
@@ -99,37 +95,48 @@
   justify-items: center;
   align-items: center;
   justify-content: center;
-  /* height: 30vh; */
 }
 .pictureCSS {
   width: 100%;
   display: flex;
   justify-content: center;
 }
-.datesystem {
-  margin-top: 60px;
-  /* margin-left: 20%; */
-  width: 100%;
-  height: 50px;
+.descriptioncontainer {
+  margin-top: 20px;
+  width: 80%;
+  height: fit-content;
   display: flex;
   background-color: rgba(233, 222, 222, 0.616);
-  align-items: center;
+  background-color: rgba(240, 232, 232, 0.815);
+  padding: 2rem;
 }
 .icons2 {
   margin-left: 12%;
   width: 25px;
   height: 25px;
 }
-.datetext {
+.description {
   font-size: 20px;
   font-family: "Prompt";
   /* font-weight: 500; */
   margin-left: 10px;
+  width: fit-content;
+  height: fit-content;
 }
 .datenews {
   font-family: "Prompt";
-  margin-top: 30px;
-  margin-right: 40%;
+  /* margin-top: 30px; */
+  margin-left: 10px;
+  color: rgb(44, 44, 43);
+  font-size: 20px;
+}
+.datenewscontainer {
+  width: 100%;
+  height: 50px;
+  display: flex;
+  /* justify-content: center; */
+  align-items: center;
+  /* background-color: rgba(233, 222, 222, 0.616); */
 }
 .scroll::-webkit-scrollbar {
   width: 10px;
