--- a/src/Fixeditems.css
+++ b/src/Fixeditems.css
@@ -34,8 +34,8 @@
   /* margin-top: 20px; */
 }
 .BtnPDF {
-  display: none;
+  /* display: none; */
 }
 .BtnPNG {
-  display: none;
+  /* display: none; */
 }
