--- a/src/HOMEPAGE.css
+++ b/src/HOMEPAGE.css
@@ -40,8 +40,13 @@
   height: 1px;
   background-color: rgba(255, 255, 255, 0.61);
 }
-.linespace2 {
+.containerspace {
+  display: flex;
+  justify-content: center;
   width: 100%;
+}
+.linespace2 {
+  width: 85%;
   height: 1px;
   background-color: rgba(255, 255, 255, 0.61);
   margin-bottom: 100px;
@@ -64,7 +69,7 @@
 }
 .scroll {
   overflow-y: scroll;
-  height: 80%;
+  height: 85%;
   margin-top: 5px;
 }
 .zonebody {
@@ -162,5 +167,15 @@
   }
   .GridNew {
     display: none;
+  }
+}
+@media (max-height: 820px) {
+  .scroll {
+    height: 70%;
+  }
+}
+@media (max-height: 450px) {
+  .scroll {
+    height: 40%;
   }
 }
